Salesforce/force-app/main/default/objects/Merge_Duplicate__mdt/Merge_Duplicate__mdt.object-meta.xml
<CustomObject>
    <label>Merge Duplicate</label>
    <pluralLabel>Merge Duplicates</pluralLabel>
</CustomObject>