Salesforce/force-app/main/default/objects/Merge_Duplicate__mdt/fields/Duplicate_Criteria_Fields__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Criteria_Fields__c</fullName>
    <label>Duplicate Criteria Fields</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>