Salesforce/force-app/main/default/objects/Merge_Duplicate__mdt/fields/Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Display__c</fullName>
    <label>Fields To Display</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>