Salesforce/force-app/main/default/objects/Merge_Duplicate__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>